// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component as selector 1`] = `
.glamor-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.glamor-1 .css-rey33e-H1 {
  color: green;
}

.glamor-0 {
  font-size: 20px;
}

<div
  className="glamor-1"
>
  hello 
  <h1
    className="glamor-0"
  >
    This will be green
  </h1>
   world
</div>
`;

exports[`component as selector 2`] = `
".css-1exq05b {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.css-1exq05b .css-rey33e-H1 {
  color: green;
}

.css-bk9fzy {
  font-size: 20px;
}"
`;

exports[`component as selector function interpolation 1`] = `
.glamor-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.glamor-1 .css-rey33e-H1 {
  color: green;
}

.glamor-0 {
  font-size: 20px;
}

<div
  className="glamor-1"
  fontSize={10}
>
  hello 
  <h1
    className="glamor-0"
    fontSize={20}
  >
    This will be green
  </h1>
   world
</div>
`;

exports[`component as selector function interpolation 2`] = `
".css-1exq05b {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.css-1exq05b .css-rey33e-H1 {
  color: green;
}

.css-bk9fzy {
  font-size: 20px;
}"
`;
